[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/Gamepixies-8MO6n.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/DropDownMenu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Text.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.411765 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="DropDownMenu" type="Control"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeText" type="RichTextLabel" parent="PopupMenu"]
margin_left = 100.638
margin_top = 20.0
margin_right = 229.638
margin_bottom = 49.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=15 freq=1.5]Resume[/wave][/center]"
text = "Resume"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitText" type="RichTextLabel" parent="PopupMenu"]
margin_left = 126.307
margin_top = 108.0
margin_right = 202.307
margin_bottom = 148.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=15 freq=1.5]Quit[/wave][/center]"
text = "Quit"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PopupMenu"]
margin_left = 105.0
margin_top = 21.0
margin_right = 223.0
margin_bottom = 50.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="PopupMenu"]
margin_left = 129.0
margin_top = 107.0
margin_right = 201.0
margin_bottom = 136.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="PopupMenu/ResumeButton" to="PopupMenu/ResumeText" method="drop_text"]
[connection signal="mouse_exited" from="PopupMenu/ResumeButton" to="PopupMenu/ResumeText" method="drop_text_off"]
[connection signal="pressed" from="PopupMenu/ResumeButton" to="." method="drop_down"]
[connection signal="mouse_entered" from="PopupMenu/QuitButton" to="PopupMenu/QuitText" method="drop_text"]
[connection signal="mouse_exited" from="PopupMenu/QuitButton" to="PopupMenu/QuitText" method="drop_text_off"]
[connection signal="pressed" from="PopupMenu/QuitButton" to="PopupMenu/QuitButton" method="menu_quit"]
