[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Gamepixies-8MO6n.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Text.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=4]





[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 10, 8 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.31498
margin_right = 0.314972
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StartText" type="RichTextLabel" parent="."]
margin_left = 109.0
margin_top = 25.0
margin_right = 215.0
margin_bottom = 55.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=10 freq=2]Start![/wave][/center]"
text = "Start!"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitText" type="RichTextLabel" parent="."]
margin_left = 107.419
margin_top = 122.917
margin_right = 213.419
margin_bottom = 154.917
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=10 freq=2]Quit![/wave][/center]"
text = "Quit!"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 114.0
margin_top = 120.0
margin_right = 206.0
margin_bottom = 152.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 114.0
margin_top = 23.0
margin_right = 206.0
margin_bottom = 56.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="QuitButton" to="QuitText" method="menu_text"]
[connection signal="mouse_exited" from="QuitButton" to="QuitText" method="menu_text_off"]
[connection signal="pressed" from="QuitButton" to="." method="menu_quit"]
[connection signal="mouse_entered" from="StartButton" to="StartText" method="menu_text"]
[connection signal="mouse_exited" from="StartButton" to="StartText" method="menu_text_off"]
[connection signal="pressed" from="StartButton" to="." method="menu_start"]
